@@ -18,7 +18,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.8</version>
+    <version>3.1.3</version>
   </parent>
 
   <modules>
@@ -32,7 +32,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
 
     <assertj-core.version>1.7.1</assertj-core.version>
     <awaitility.version>1.4.0</awaitility.version>
@@ -43,8 +43,8 @@
     <esapi.version>2.3.0.0</esapi.version>
     <freemarker.version>2.3.29</freemarker.version>
     <guava.version>19.0</guava.version>
-    <javax.inject.version>1</javax.inject.version>
-    <jersey.version>2.36</jersey.version>
+    <jakarta.inject.version>1</jakarta.inject.version>
+    <jersey.version>3.1.3</jersey.version>
     <jetty.version>9.4.48.v20220622</jetty.version>
     <jhipsterloaded.version>0.7</jhipsterloaded.version>
     <jjwt.version>0.9.1</jjwt.version>
@@ -65,7 +65,7 @@
     <obiba-commons.version>3.1-SNAPSHOT</obiba-commons.version>
     <oltu.version>1.0.1</oltu.version>
     <postgres.version>42.5.1</postgres.version>
-    <protobuf.version>2.5.0</protobuf.version>
+    <protobuf.version>3.24.3</protobuf.version>
     <protobuf-java-format.version>1.2.1-obiba</protobuf-java-format.version>
     <shiro.version>1.10.0</shiro.version>
     <shiro-extras.version>1.1.0</shiro-extras.version>
@@ -83,10 +83,60 @@
     <maven-release-plugin.version>2.5.2</maven-release-plugin.version>
     <rpm-maven-plugin.version>2.1.4</rpm-maven-plugin.version>
 
+    <!-- java 17 -->
+    <javax-xml.version>2.4.0-b180725.0427</javax-xml.version>
+    <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
+    <jakarta.inject.version>2.0.1.MR</jakarta.inject.version>
+    <javax-validation.version>2.0.1.Final</javax-validation.version>
+    <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
   </properties>
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.glassfish.jersey.ext</groupId>
+        <artifactId>jersey-spring5</artifactId>
+        <version>3.0.0-M6</version>
+      </dependency>
+      <dependency>
+        <groupId>jakarta.annotation</groupId>
+        <artifactId>jakarta.annotation-api</artifactId>
+        <version>${jakarta.annotation.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.inject</groupId>
+        <artifactId>jakarta.inject-api</artifactId>
+        <version>${jakarta.inject.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>6.0.0</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>${javax-validation.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.ws.rs</groupId>
+        <artifactId>jakarta.ws.rs-api</artifactId>
+        <version>${jakarta.ws.rs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>3.8.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
+        <version>5.2.1</version>
+      </dependency>
 
       <dependency>
         <groupId>org.obiba.agate</groupId>
@@ -177,9 +227,9 @@
         <version>${commons-io.version}</version>
       </dependency>
       <dependency>
-        <groupId>javax.inject</groupId>
-        <artifactId>javax.inject</artifactId>
-        <version>${javax.inject.version}</version>
+        <groupId>jakarta.inject</groupId>
+        <artifactId>jakarta.inject</artifactId>
+        <version>${jakarta.inject.version}</version>
       </dependency>
       <dependency>
         <groupId>joda-time</groupId>
@@ -522,6 +572,17 @@
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.cache</groupId>
+      <artifactId>cache-api</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-mail</artifactId>
     </dependency>
 
@@ -661,7 +722,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+          </argLine>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
           <!-- Force alphabetical order to have a reproducible build -->
